# thalassophobia

./: CREDITS.md  Cargo.toml  LICENSE-AGPL  LICENSE-MPL  README.md  build.rs
.cargo/: config.toml
assets/: README.md
assets/shaders/: water-surface.wgsl
crates/client/: Cargo.toml
crates/client/src/: debugsys.rs  escape.rs  initial.rs  main.rs  state.rs
crates/client/src/detail/: markers.rs  mod.rs
crates/client/src/devstuff/: controllers.rs  infodump.rs  input.rs  mod.rs  overlays.rs
crates/client/src/initial/: mod.rs  progress.rs  ui.rs
crates/client/src/mainmenu/: build.rs  mod.rs
crates/client/src/multiplayer/: joining.rs  mod.rs
crates/client/src/player/: controls.rs  gamepads.rs  mod.rs
crates/client/src/power/: mod.rs  overlay.rs
crates/client/src/settings/: access.rs  audio.rs  controls.rs  graphics.rs  keybinds.rs  mod.rs
crates/dedi/: Cargo.toml
crates/dedi/src/: main.rs
crates/defs/: Cargo.toml
crates/game/: Cargo.toml
crates/game/src/: disabling.rs  lib.rs  plugins.rs
crates/game/src/bodies/: mod.rs  segment.rs
crates/game/src/campaign/: mod.rs
crates/game/src/character/: mod.rs
crates/game/src/character/movement/: actions.rs  controller.rs  params.rs
crates/game/src/devtools/: diagnostics.rs  entities.rs  inspectors.rs  mod.rs
crates/game/src/initialisation/: mod.rs  plugin.rs
crates/game/src/living/: mod.rs  state.rs
crates/game/src/living/stuns/: balance.rs  mod.rs  ragdoll.rs
crates/game/src/living/vitality/: mod.rs  wounds.rs
crates/game/src/math/: curve.rs  fluids.rs  mod.rs  transform.rs  units.rs
crates/game/src/package/: metadata.rs  mod.rs
crates/game/src/physics/: masks.rs  mod.rs
crates/game/src/players/: mod.rs
crates/game/src/power/: devtools.rs  mod.rs  sink.rs  source.rs  storage.rs
crates/game/src/settings/: access.rs  audio.rs  controls.rs  graphics.rs  mod.rs
crates/game/src/simulation/: mod.rs  ticking.rs
crates/game/src/state/: initial.rs  mod.rs  sim_tick.rs
crates/game/src/structure/: mod.rs
crates/game/src/structure/compartments/: flooding.rs  mod.rs  portal.rs
crates/game/src/vessel/: mod.rs  thruster.rs
crates/game/src/vessel/physics/: limit.rs  mod.rs
crates/game/src/vessel/piloting/: actions.rs  controller.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  lobbies.rs  lobby.rs  settings.rs
crates/shared/: Cargo.toml
crates/shared/src/: disabling.rs  initial.rs  lib.rs  movement.rs  multiplayer.rs  physics.rs  prelude.rs  schedules.rs  setup.rs  simulation.rs  state.rs
crates/shared/src/bodies/: mod.rs  segment.rs
crates/shared/src/campaign/: mod.rs
crates/shared/src/character/movement/: actions.rs  controller.rs  mod.rs  params.rs
crates/shared/src/controller/: actions.rs  mod.rs  queries.rs  systems.rs
crates/shared/src/living/: balance.rs  mod.rs  state.rs
crates/shared/src/living/stuns/: balance.rs  ragdoll.rs
crates/shared/src/living/vitality/: mod.rs  wounds.rs
crates/shared/src/math/: curve.rs  energy.rs  fluids.rs  mod.rs  transform.rs  units.rs  water.rs
crates/shared/src/multiplayer/: mod.rs  permissions.rs  player.rs  quic.rs
crates/shared/src/package/: metadata.rs
crates/shared/src/player/: controller.rs  mod.rs  movement.rs  queries.rs
crates/shared/src/players/: mod.rs
crates/shared/src/players/multiplayer/: mod.rs
crates/shared/src/power/: battery.rs  mod.rs  sink.rs  source.rs  storage.rs  transfer.rs
crates/shared/src/scripting/: asset.rs  mod.rs
crates/shared/src/structure/: mod.rs
crates/shared/src/structure/compartments/: flooding.rs  mod.rs  portal.rs
crates/shared/src/vessel/: bearings.rs  controller.rs  mod.rs  thruster.rs
crates/shared/src/vessel/physics/: drag.rs  limit.rs  mod.rs  righting.rs  roll.rs
crates/shared/src/vessel/piloting/: actions.rs  controller.rs  drag.rs  mod.rs
crates/shared/src/vitality/: mod.rs
design/: README.md  book.toml
design/src/: SUMMARY.md
design/src/character/: abstract.md  equipment.md  exosuits.md  health.md  repairtools.md  respawning.md  statuses.md  stunning.md  upgrades.md
design/src/character/guns/: abstract.md  flechettes.md  pistols.md  rifles.md  shotguns.md  spearguns.md
design/src/creatures/: abstract.md  ai.md  ecosystem.md  flavor.md  large.md  leviathan.md  medium.md  small.md
design/src/crew/: abstract.md  communication.md  fabrication.md  reputation.md  resources.md  techweb.md
design/src/design/analysis/: abstract.md  barotrauma.md  miscellaneous.md
design/src/design/guidelines/: abstract.md  transport_missions.md
design/src/design/tenets/: abstract.md  creativity.md  tedium.md  trust.md
design/src/story/: abstract.md
design/src/submarine/: abstract.md  compartments.md  construction.md  electricity.md  hull.md  maintenance.md  navigation.md  reactor.md  structure.md  upgrades.md
game/: Cargo.toml
game/src/: main.rs
game/src/devmenu/: mod.rs
game/src/gamestate/: mod.rs  simulation.rs
game/src/mainmenu/: frontpage.rs  joingame.rs  lobby.rs  mod.rs
game/src/multiplayer/: mod.rs
game/src/ui/: mod.rs
src/: globals.rs  main.rs  state.rs
src/compartments/: mod.rs
src/devmenu/: mod.rs
src/gamestate/: mod.rs  simulation.rs
src/guns/: ammo.rs  firing.rs  mod.rs
src/health/: mod.rs  vitality.rs
src/items/: inventory.rs  mod.rs
src/mainmenu/: frontpage.rs  lobby.rs  mod.rs  multiplayer.rs  settings.rs  startgame.rs
src/movement/: controller.rs  intent.rs  keyboard.rs  mod.rs
src/multiplayer/: mod.rs
src/settings/: audio.rs  controls.rs  graphics.rs  mod.rs  network.rs  options.rs  widget.rs
src/structure/: mod.rs
src/vitality/: mod.rs
