[package]
name = "thalassophobia"
version = "0.1.0"
edition = "2021"
authors = ["veritius <veritiusgaming@gmail.com>"]

[features]
default = ["dev"]
dev = [
    "dep:bevy-inspector-egui",
    "bevy_rapier3d/debug-render-3d"
]

[dependencies.bevy]
version = "0.12"
features = ["wayland"]

[dependencies.bevy_stardust]
git = "https://github.com/Veritius/bevy_stardust.git"
branch = "0.2.0"

[dependencies.bevy_rapier3d]
version = "0.23.0"
features = ["simd-stable", "parallel"]

[dependencies.bevy_egui]
version = "0.23.0"

[dependencies.bevy-inspector-egui]
version = "0.21.0"
optional = true