[package]
name = "thalassophobia"
version = "0.1.0"
edition = "2021"
authors = ["veritius <veritiusgaming@gmail.com>"]

[features]
default = ["dev"]
dev = [
    "dep:bevy-inspector-egui",
    "bevy_rapier3d/debug-render-3d"
]

[dependencies]
# Required for core functionality
bevy = "0.13"
bevy_stardust = "0.3"
bevy_rapier3d = { version = "0.25", features = ["simd-stable", "parallel"]}

# Required for defs
serde = { version = "1", features = ["derive"] }
ron = "0.8"

# Required for UI
bevy_egui = "0.25"

# dev feature dependencies
bevy-inspector-egui = { version = "0.23", optional = true }