[package]
name = "thalassophobia"
version = "0.1.0"
edition = "2021"
authors = ["veritius <veritiusgaming@gmail.com>"]

[dependencies]
# Required for core functionality
bevy = "0.13"
bevy_rapier3d = { version = "0.25", features = ["simd-stable", "parallel"]}

# Required for defs
serde = { version = "1", features = ["derive"] }
ron = "0.8"

# Required for UI
bevy_egui = "0.26"

# Required for multiplayer
bevy_stardust = { version = "0.4", optional = true }
bevy_stardust_udp = { git = "https://github.com/Veritius/bevy_stardust.git", branch = "udp-0.1.0" }

# dev feature dependencies
bevy-inspector-egui = { version = "0.23", optional = true }

[features]
default = ["dev", "multiplayer"]

# Developer features like the devmenu
dev = [
    "dep:bevy-inspector-egui",
    "bevy_rapier3d/debug-render-3d"
]

# Multiplayer feature flag
multiplayer = [
    "dep:bevy_stardust"
]