[package]
name = "thalassophobia_client"
version = "0.1.0"
edition = "2021"
authors = ["veritius <veritiusgaming@gmail.com>"]

[dependencies.shared]
package = "thalassophobia_shared"
path = "../shared"
features = ["render"]

[dependencies.server]
package = "thalassophobia_server"
path = "../server"
optional = true

[features]
default = ["multiplayer", "hosting"]
multiplayer = ["shared/multiplayer"]
hosting = ["multiplayer", "dep:server"]