[package]
name = "thalassophobia_client"
version = "0.1.0"
edition = "2021"
authors = ["veritius <veritiusgaming@gmail.com>"]

[dependencies.shared]
package = "thalassophobia_shared"
path = "../shared"
features = ["render"]

[dependencies.server]
package = "thalassophobia_server"
path = "../server"
optional = true

[dependencies.bevy_egui]
version = "0.26"
optional = true

[features]
default = ["multiplayer", "hosting", "devstuff"]
devstuff = ["shared/gizmos", "bevy_egui"]
multiplayer = ["shared/multiplayer"]
hosting = ["multiplayer", "dep:server"]