[package]
name = "thalassophobia_client"
version = "0.1.0"
edition = "2021"
authors = ["veritius <veritiusgaming@gmail.com>"]

[dependencies.shared]
package = "thalassophobia_shared"
path = "../shared"
features = ["render"]

[dependencies.server]
package = "thalassophobia_server"
path = "../server"
optional = true

[dependencies.bevy_egui]
version = "0.28"
optional = true

[dependencies.bevy-inspector-egui]
version = "0.25.1"
optional = true

[features]
default = ["multiplayer", "hosting", "devstuff"]
devstuff = ["shared/gizmos", "dep:bevy_egui", "dep:bevy-inspector-egui"]
multiplayer = ["shared/multiplayer"]
hosting = ["multiplayer", "dep:server"]