[package]
name = "thalassophobia"
version = "0.1.0"
edition = "2021"
authors = ["veritius <veritiusgaming@gmail.com>"]

[dependencies.bevy]
version = "0.14"
default-features = false
features = [
    "multi_threaded",
    "bevy_asset",
    "bevy_scene",
    "bevy_state"
]

[dependencies.avian3d]
version = "0.1"

[dependencies.aery]
version = "0.7.4"

[dependencies.leafwing-input-manager]
version = "0.15"

[dependencies.bevy_mod_progress]
version = "0.3"

[dependencies.smallvec]
version = "1.13"
features = ["union", "serde"]

[dependencies.smartstring]
version = "1"
features = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.semver]
version = "1"
features = ["serde"]

[dependencies.const-fnv1a-hash]
version = "1.1"

[dependencies.bevy_stardust]
version = "0.6"
optional = true

[dependencies.bevy_egui]
version = "0.30"
optional = true

[dependencies.bevy-inspector-egui]
version = "0.27.0"
optional = true

[features]
default = [
    "dynamic_linking"
]

render = [
    "bevy/bevy_audio",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_gltf",
    "bevy/bevy_pbr",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/bevy_winit",
    "bevy/png",
    "bevy/tonemapping_luts",
    "bevy/vorbis",
    "bevy/x11"
]

gizmos = [
    "render",
    "bevy/bevy_gizmos"
]

multiplayer = [
    "bevy_stardust"
]

hosting = [
    "multiplayer"
]

joining = [
    "multiplayer"
]

dynamic_linking = [
    "bevy/dynamic_linking"
]

[[bin]]
name = "client"
required-features = [
    "render"
]

[[bin]]
name = "devclient"
required-features = [
    "render",
    "gizmos",
    "bevy_egui",
    "bevy-inspector-egui"
]

[[bin]]
name = "server"
required-features = [
    "hosting"
]