[package]
name = "thalassophobia_shared"
version = "0.1.0"
edition = "2021"
authors = ["veritius <veritiusgaming@gmail.com>"]

[lib]
crate-type = ["dylib"]

[dependencies.bevy]
version = "0.13"
default-features = false
features = [
    "multi-threaded",
    "bevy_asset",
    "bevy_scene",
]

[dependencies.bevy_rapier3d]
version = "0.25"
features = ["parallel"]

[dependencies.leafwing-input-manager]
version = "0.13"

[dependencies.bevy_mod_progress]
version = "0.1"

[dependencies.bevy_stardust]
git = "https://github.com/Veritius/bevy_stardust"
branch = "udp-0.1.0"
optional = true

[dependencies.bevy_stardust_udp]
git = "https://github.com/Veritius/bevy_stardust"
branch = "udp-0.1.0"
optional = true

[dependencies.smallvec]
version = "1.13"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.semver]
version = "1"
features = ["serde"]

[features]
default = [
    "bevy_dylib"
]
render = [
    "bevy/bevy_audio",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_gizmos",
    "bevy/bevy_gltf",
    "bevy/bevy_pbr",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/bevy_winit",
    "bevy/png",
    "bevy/tonemapping_luts",
    "bevy/vorbis",
    "bevy/x11"
]
multiplayer = [
    "bevy_stardust",
    "bevy_stardust_udp"
]
phys_debug = ["bevy_rapier3d/debug-render"]
bevy_dylib = ["bevy/dynamic_linking"]
